                         to line number and memory address and then replace all line txt match with the actual values of the list

                         :: To replace file:
                            (1) Create a string for regex
                            (2) Create a new string to write in the file
                            (3) Replace the line in the file by string in (2)
                :: HIP 2: Try short in python




> [THE PROJECT] Adding chmod +x to tokenizer
> [THE PROJECT] Planning How to short the trace log generated by Map2Check




> [THE PROJECT] Dealing with alloc C function. The actual project status generates false positives cuz the alloc function
    :: HIP1: Adding a filed in mapping to identify what is the allocation function adopted, this way we can write a correct
            leak asssertion to.

> [THE PROJECT] Creating an analysis to improve the use of __VERIFIER_nondet_int(). E.g., in cstrncat_alloc.c
    is adopted to determine the size of array
    ::HIP1: Creating a static analysis to determine what kid of __VERIFIER_nondet_int() should be, such as:
            (1) 0 or 1 to whiles and fors, or
            (2) the array size os vars









> [THE PROJECT] Stop install when the requirements FAIL
> [THE PROJECT] Needed to networkx -- Adicionar no instalador no MAP wget https://bootstrap.pypa.io/ez_setup.py -O - | python >>>> pacote setupinstall
> [THE PROJECT] TODO: install test in diferent PCs
> [THE PROJECT] Checking ESBMC cuz this apt-get install libc6-dev-i386

> [FILE:create_map.py] Otimizing the time execution of args parse. The average time is 0.5s (this maybe is high)


> [FILE:create_map.py] TODO: Analyzing print in the trace log about arrays
        :: Data: in this Decl int z[4]={2,6,1,9}; is presented in the trace z = 2; :(
            ::HIP1: Try ignore the Decl put --, and for assignments consider map this a[i]