@@ -83,48 +83,8 @@ def timeout_command(command, timeout):
             os.waitpid(-1, os.WNOHANG)
             return "TIME OUT",[]
 
-    #list_out_exec.append(process.stdout)
 
-    # Strategy to short the trace log generated by the execution
-    # >>
-    list_otimized_stdout = []
-    #process.stdout.readlines().reverse()
-    commands.getoutput("sed -i '1i#|Address|Address points to|Function ID|IS DYNAMIC|Set FREE|IS UNION|Line|Var Name|Var Value' /tmp/tmp_map_currentlog.tmp ")
-    #os.system("cat /tmp/tmp_map_currentlog.tmp")
-    #sys.exit()
-
-    #trace_log = open("/tmp/tmp_map_currentlog.tmp","r")
-    #list_file_trace = trace_log.readlines()
-    #trace_log.close()
-
-    # Get data in CSV format
-    csv_reader = reader_csv_output.ReaderCsv()
-    list_csv_trace = csv_reader.loadCsvFile("/tmp/tmp_map_currentlog.tmp","|")
-    #print(list_csv_trace['Line'])
-    len_list = list_csv_trace['Line']
-    tmp_list_index = 0
-    while len_list >= 0:
-        if list_csv_trace['Line'] == 0:
-            print()
-        len_list -= 1
-
-
-
-    sys.exit()
-
-
-
-    len_list = len(list_file_trace)
-    ind = len_list-1
-    print(ind)
-    # Search in reverse order
-    while ind >= 0:
-        print(list_file_trace[ind],end="")
-        ind -= 1
-
-    sys.exit()
-
-    list_out_exec.append()
+    list_out_exec.append(process.stdout)
     list_out_exec.append(process.stderr)
     return list_out_exec
 
